--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- About -->
     <section id="about" class="about">
       <div class="container text-center">
-        <h2>GROUP 10hohoohoho</h2>
+        <h2>GROUP 10!!!!!!</h2>
         <p class="lead">This theme features some wonderful photography courtesy of
           <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
       </div>
